Notmuch 0.21 (UNRELEASED)
=========================

Emacs Interface
---------------

`notmuch-emacs-version` is used in `User-Agent` header

  The value of recently introduced variable `notmuch-emacs-version` is
  now used as a part of `User-Agent` header when sending emails.

Removed `notmuch-version` function by renaming it to `notmuch-cli-version`

  With existing variable `notmuch-emacs-version` the accompanied
  function which retrieves the version of `notmuch-command` is
  better named as `notmuch-cli-version`.

Library
-------

The use of absolute paths is now enforced when calling
`notmuch_database_{open, create}`.

Notmuch 0.20.2 (2015-06-27)
===========================

Emacs Interface
---------------

Bug fix for marking messages read in `notmuch-tree` mode.

Notmuch 0.20.1 (2015-06-01)
===========================

Test Suite
----------

Work around apparent gdb bug on arm64.

Notmuch 0.20 (2015-05-31)
=========================

Command-Line Interface
----------------------

There is a new `mimetype:` search prefix

  The new `mimetype:` search prefix allows searching for the
  content-type of attachments, which is now indexed. See the
  `notmuch-search-terms` manual page for details.

Path to gpg is now configurable

  On systems with multiple versions of gpg, you can tell
  notmuch which one to use by setting `crypto.gpg_path`

Emacs
-----

Avoid rendering large text attachements.

Improved rendering of CID references in HTML.

Vim
---

Vim client now respects excluded tags.

Notmuch-Mutt
------------

Support messages without Message-IDs.

Library
-------

Undeprecate single message mboxes

  It seems more trouble to remove this feature than expected, so
  `notmuch new` will no longer nag about mboxes with a single message.

New error logging facility

  Clients should call `notmuch_database_status_string` to retrieve
  output formerly printed to stderr.

Several bug fixes related to stale iterators
